fix urls issue in setup

--- a/source/config.inc.php.dist
+++ b/source/config.inc.php.dist
@@ -30,7 +30,7 @@ $this->dbPwd  = '<dbPwd>'; // database user password
 $this->dbDriverOptions = []; // database driver options
 $this->dbUnixSocket = null; // unix domain socket, optional
 $this->sShopURL     = '<sShopURL>'; // Shop base url, required
-$this->sSSLShopURL  = null;            // Shop SSL url, optional
+$this->sSSLShopURL  = '<sShopURL>'; // Shop SSL url, optional
 $this->sAdminSSLURL = null;            // Shop Admin SSL url, optional
 $this->sShopDir     = '<sShopDir>';
 $this->sCompileDir  = '<sCompileDir>';
