--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "ext-pdo": "*",
         "ext-json": "*",
         "phpmailer/phpmailer": "^v6.5.0",
-        "smarty/smarty": "^v2.6.31",
+        "o3-shop/smarty": "dev-support/2.6 as 2.6.34",
         "doctrine/dbal": "<=2.12.1",
         "doctrine/collections": "^1.4.0",
         "monolog/monolog": "^v1.23.0",
