--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "o3-shop/shop-doctrine-migration-wrapper": "^v1.0.0",
         "o3-shop/shop-db-views-generator": "^v1.0.0",
         "o3-shop/shop-demodata-installer": "^v1.0.0",
-        "o3-shop/shop-composer-plugin": "^v1.0.0",
+        "o3-shop/shop-composer-plugin": "dev-b-6.5.x as v1.0.0",
         "o3-shop/shop-unified-namespace-generator": "^v1.0.0",
         "o3-shop/shop-facts": "^v1.0.0"
     },
