--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@
 # DI for modules and packages
 /var/generated_services.yaml
 /tests/Integration/Internal/Container/Dao/generated_project.yaml
+/tests/.phpunit.result.cache
