--- a/.gitignore
+++ b/.gitignore
@@ -45,4 +45,7 @@
 /tests/Integration/Internal/Container/Dao/generated_project.yaml
 /tests/.phpunit.result.cache
 
+# Config files
 .env
+/var/configuration/shops/1.yaml
+/var/generated/generated_services.yaml
