--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "OxidEsales\\EshopCommunity\\Tests\\": "./tests"
+            "OxidEsales\\EshopCommunity\\Tests\\": "./tests",
+            "OxidEsales\\TestingLibrary\\Tests\\": "vendor/o3-shop/testing-library/tests/"
         }
     },
     "minimum-stability": "dev",
@@ -102,7 +103,8 @@
         "branch-alias": {
             "dev-b-7.0.x": "7.0.x-dev",
             "dev-b-6.5.x": "6.5.x-dev",
-            "dev-b-6.4.x": "6.4.x-dev"
+            "dev-b-6.4.x": "6.4.x-dev",
+            "dev-main": "1.4.x-dev"
         }
     },
     "config": {
