--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     environment:
       APP_ENV: dev
       DATABASE_URL: mysql://o3shop:o3shop@db/o3shop
+      TZ: Europe/Berlin
 
   db:
     image: mysql:8.0
