--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       APP_ENV: dev
       DATABASE_URL: mysql://o3shop:o3shop@db/o3shop
       TZ: Europe/Berlin
+      PATH: /var/www/html/vendor/o3-shop/testing-library/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
   db:
     image: mysql:8.0
