--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get upgrade -y \
 
 # Install necessary PHP extensions and dependencies
 RUN apt-get update && apt-get install -y \
-    git unzip libicu-dev libxml2-dev libzip-dev libjpeg-dev libpng-dev libfreetype6-dev mariadb-client \
+    git unzip libicu-dev libxml2-dev libzip-dev libjpeg-dev libpng-dev libfreetype6-dev mariadb-client wget unzip \
     && docker-php-ext-install intl pdo pdo_mysql zip opcache bcmath soap
 
 RUN docker-php-ext-configure gd --with-jpeg --with-freetype \
