--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,12 +1,11 @@
-version: '3.8'
-name: 'docker-ce'
+name: 'shop-ce'
 
 services:
   app:
     build:
       context: ..
       dockerfile: docker/Dockerfile
-    container_name: o3shop-app
+    container_name: app
     ports:
       - "8080:80"
     volumes:
@@ -19,7 +18,7 @@ services:
 
   db:
     image: mysql:8.0
-    container_name: o3shop-db
+    container_name: db
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: o3shop
