Changed setting to localhost instead of 127.0.0.1, added readme.

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ O3SHOP_CONF_DBUSER="o3shop"
 O3SHOP_CONF_DBPWD="o3shop"
 
 ## URL and paths
-O3SHOP_CONF_SHOPURL="http://127.0.0.1:8080"
+O3SHOP_CONF_SHOPURL="http://localhost:8080"
 O3SHOP_CONF_SSLSHOPURL="${O3SHOP_CONF_SHOPURL}"
 O3SHOP_CONF_SHOPDIR="/var/www/html/source"
 O3SHOP_CONF_COMPILEDIR="/var/www/html/source/tmp"
