Use global .env for Docker.

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ O3SHOP_CONF_DBPORT="3306"
 O3SHOP_CONF_DBNAME="o3shop"
 O3SHOP_CONF_DBUSER="o3shop"
 O3SHOP_CONF_DBPWD="o3shop"
+O3SHOP_CONF_DBROOT="supersecret"
+
 
 ## URL and paths
 O3SHOP_CONF_SHOPURL="http://localhost:8090"
