"NEW" Docker Dev Environment (#12)
* Update issue templates

* Updated Docker Env.

* .gitignore

* Update setup file.

* Edit readme.

* Add Mailpit.

* Update gitignore.

* Update gitignore.

* Add .env

* Update .gitignore.

* Add wget.

* Use getMyDir().

* Use .env.

* Use global .env for Docker.

* Use $MY_DIR.

* Remove Version.

* Add exit 127.

* Remove unused script.

* Fix o3-setup.

---------

Co-authored-by: Ralf Trapp <74130839+ralftrapp@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Shop configuration
 /source/config.inc.php
 
+runned.txt
+
+/docker/data-mailpit
+!/docker/.env
 # Log
 /source/log/
 !/source/log/.htaccess
@@ -44,3 +48,17 @@
 /var/generated_services.yaml
 /tests/Integration/Internal/Container/Dao/generated_project.yaml
 /tests/.phpunit.result.cache
+
+.env
+/.phpstorm.meta.php/oxid.meta.php
+/source/Application/views/wave/*
+/source/out/pictures/generated/*
+/source/out/pictures/master/category/*
+/source/out/pictures/master/manufacturer/*
+/source/out/pictures/master/product/*
+/source/out/pictures/master/wrapping/img_ecard_03_wp.jpg
+/source/out/pictures/promo/*
+/source/out/wave/*
+/var/configuration/shops/1.yaml
+/var/generated/generated_services.yaml
+docker/data
