--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,6 +36,14 @@ jobs:
         extensions: mbstring, xml, ctype, json, tokenizer, pdo, pdo_mysql, mysqli
         coverage: xdebug
     
+    - name: Install Composer 2.2
+      run: |
+        php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
+        php composer-setup.php --version=2.2.21
+        php -r "unlink('composer-setup.php');"
+        sudo mv composer.phar /usr/local/bin/composer
+        composer --version
+    
     - name: Cache Composer packages
       id: composer-cache
       uses: actions/cache@v4
@@ -44,9 +52,6 @@ jobs:
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
           ${{ runner.os }}-php-
-    
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
     
     - name: Wait for MariaDB
       run: |
@@ -59,6 +64,9 @@ jobs:
       run: |
         mysql -h 127.0.0.1 -P 3306 -u root -proot -e "SHOW DATABASES;"
         mysql -h 127.0.0.1 -P 3306 -u root -proot -e "CREATE DATABASE IF NOT EXISTS o3shop_test;"
+    
+    - name: Install dependencies
+      run: composer install --prefer-dist --no-progress
     
     - name: Run PHPUnit tests with coverage
       env:
@@ -91,27 +99,3 @@ jobs:
       with:
         name: coverage-report-php${{ matrix.php-versions }}
         path: coverage-html/
-    
-    - name: Generate coverage badge
-      run: |
-        # Extract coverage percentage from coverage.xml
-        COVERAGE=$(php -r "
-          \$xml = simplexml_load_file('coverage.xml');
-          \$metrics = \$xml->project->metrics;
-          \$covered = (int)\$metrics['coveredstatements'];
-          \$total = (int)\$metrics['statements'];
-          \$percentage = \$total > 0 ? round((\$covered / \$total) * 100, 2) : 0;
-          echo \$percentage;
-        ")
-        echo "Coverage: ${COVERAGE}%"
-        echo "COVERAGE_PERCENTAGE=${COVERAGE}" >> $GITHUB_ENV
-    
-    - name: Create coverage badge
-      uses: schneegans/dynamic-badges-action@v1.7.0
-      with:
-        auth: ${{ secrets.GIST_SECRET }}
-        gistID: your-gist-id
-        filename: coverage-badge.json
-        label: Coverage
-        message: ${{ env.COVERAGE_PERCENTAGE }}%
-        color: ${{ env.COVERAGE_PERCENTAGE > 80 && 'green' || env.COVERAGE_PERCENTAGE > 60 && 'yellow' || 'red' }}
