--- a/composer.json
+++ b/composer.json
@@ -104,7 +104,8 @@
             "dev-b-7.0.x": "7.0.x-dev",
             "dev-b-6.5.x": "6.5.x-dev",
             "dev-b-6.4.x": "6.4.x-dev",
-            "dev-*": "1.4.x-dev"
+            "dev-main": "1.4.x-dev",
+            "dev-b-1.4-*": "1.4.x-dev"
         }
     },
     "config": {
