--- a/composer.json
+++ b/composer.json
@@ -105,7 +105,9 @@
             "dev-b-6.5.x": "6.5.x-dev",
             "dev-b-6.4.x": "6.4.x-dev",
             "dev-main": "1.4.x-dev",
-            "dev-b-1.4-*": "1.4.x-dev"
+            "dev-b-1.4-*": "1.4.x-dev",
+            "dev-b-1.4-fix-tests": "1.4.x-dev"
+
         }
     },
     "config": {
