--- a/composer.json
+++ b/composer.json
@@ -101,11 +101,7 @@
             }
         },
         "branch-alias": {
-            "dev-b-7.0.x": "7.0.x-dev",
-            "dev-b-6.5.x": "6.5.x-dev",
-            "dev-b-6.4.x": "6.4.x-dev",
-            "dev-main": "1.4.x-dev",
-            "dev-b-1.4-*": "1.4.x-dev"
+            "dev-main": "1.4.x-dev"
         }
     },
     "config": {
