--- a/.env.ci
+++ b/.env.ci
@@ -10,12 +10,11 @@ O3SHOP_CONF_DBUSER="o3shop"
 O3SHOP_CONF_DBPWD="o3shop"
 O3SHOP_CONF_DBROOT="supersecret"
 
-
 ## URL and paths
 O3SHOP_CONF_SHOPURL="http://localhost:8090"
 O3SHOP_CONF_SSLSHOPURL="${O3SHOP_CONF_SHOPURL}"
-O3SHOP_CONF_SHOPDIR="/var/www/html/source"
-O3SHOP_CONF_COMPILEDIR="/var/www/html/source/tmp"
+O3SHOP_CONF_SHOPDIR="/home/runner/work/shop-ce/shop-ce/source"
+O3SHOP_CONF_COMPILEDIR="/home/runner/work/shop-ce/shop-ce/source/tmp"
 
 ### optional
 ## URL and Paths
